samples/_failures_safe/1761084562_d918e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00d2ee4d.c: In function ‘main’:
./samples/SAFE/__tmp_00d2ee4d.c:175:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  175 |     struct Token token
      |            ^~~~~
./samples/SAFE/__tmp_00d2ee4d.c:175:12: error: expected declaration or statement at end of input
